plugins {
    id 'org.springframework.boot' version "$springBoot"
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = 21
    targetCompatibility = 21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "info.picocli:picocli:$picocliVersion"
    implementation project(':lib:ac-api')
    implementation "net.sf.applecommander:ShrinkItArchive:$shkVersion"
    implementation "net.sf.applecommander:applesingle-api:$asVersion"
    implementation "net.sf.applecommander:bastools-api:$btVersion"
    implementation "net.sf.applecommander:acdasm:$acdasmVersion"
    implementation "com.google.code.gson:gson:$gsonVersion"

    testImplementation platform("org.junit:junit-bom:$junitVersion")
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'io.github.applecommander.acx.Main'
}

bootJar {
  archiveBaseName = 'AppleCommander'
  archiveAppendix = 'acx'
  manifest {
      attributes 'Implementation-Title': "AppleCommander 'acx'",
                  'Implementation-Version': archiveVersion
  }
  from('../../LICENSE')
}
